# tsqr-tc

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
include/tsqr_tc/: batchedqr.hpp  tsqr.hpp
include/tsqr_tc/detail/: constant.hpp  macro.hpp  type.hpp
src/: batchedqr.cu  tsqr.cu  tsqr_buffer.cu  utils.hpp
test/: Makefile  batchqr.cu  qr256x128.cu  qr256x256.cu  tsqr.cu  utils.cu  utils.hpp
